fixing genre bug and genre div overflow

--- a/card.css
+++ b/card.css
@@ -45,6 +45,7 @@
 
 .movie_info .genre {
   gap: 0.5rem;
+  flex-wrap: wrap;
 }
 
 .movie_info .genre li {
